# simple-dot-game

./: Cargo.toml  README.md
src/: main.rs
