[package]
name = "shitty-dot-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
rand = "0.8.5"

[profile.release-small]
inherits="release"
opt-level='s'
lto=true
panic="abort"
strip=true